[package]
name = "shader_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
wgpu = "0.16"
pollster = "0.3"
bytemuck = { version = "1.13.1", features = [ "derive" ] }

env_logger = "0.10"
log = "0.4"

# Size-optimizations for release build

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*